app/src/test/resources/programs/invalid/identifiers/types.exe
foo main() -> Int = {
	// Variable type name must start with upper case letter.
	let badType: int = 0;
	let mut another_bad_type: bool = false;
	let cONSTANT: nope = ();
	0
}

// Function return type name must start with upper case letter.
foo returnType() -> int = 0;

// Return type name is checked regardless of existence of arguments.
foo returnTypeWithArgument(arg: Bool) -> int = 0;

// Argument type name must start with upper case letter.
foo argument(arg: bool) -> Bool = false;

// Invalid type name is found even if others are correct.
foo oneArgument(arg1: Int, arg2: nope, arg3: Bool) -> Nope = ();

// Both argument type names and return type name must be correct.
foo mixedArgumentsAndReturn(arg1: int, arg2: Nope, arg3: bool) -> nope = ();
